k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splab-backend
  namespace: splab
  labels:
    app: splab-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splab-backend
  template:
    metadata:
      labels:
        app: splab-backend
    spec:
      containers:
      - name: splab-backend
        image: neiphu/splab-backend:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: docker-credentials
