k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splab-ingress
  namespace: splab
spec:
  ingressClassName: traefik
  rules:
  - host: splab.honki.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splab-clusterip
            port:
              number: 80
